Ajout de la relation suivre

--- a/Site web/Connexion - Université Laval.html
+++ b/Site web/Connexion - Université Laval.html
@@ -317,7 +317,7 @@ function navigateurSupporteMemoirePourLeProtocoleFichier() {
                     </a>
                 </p>
                 <div class="sau-auth__boutons-formulaire">
-                    <button id="btnSubmit" class="sau-bouton-primary" type="submit" data-i18n="bt-se-connecter" tabindex="3">Se connecter</button>
+                    <button id="btnSubmit" class="sau-bouton-primary" type="submit" data-i18n="bt-se-connecter" tabindex="3"><a href="index.html">Se connecter</a></button>
                 </div>
 
                 <h4 class="m-u--h4 m-u--padding-top--l" data-i18n="utilisateur">Vous n'avez&nbsp;pas de&nbsp;compte et&nbsp;vous&nbsp;voulez déposer une&nbsp;demande&nbsp;d'admission?</h4>
